--- a/index.html
+++ b/index.html
@@ -289,11 +289,11 @@
 
                     <div class="col-lg-6 col-md-6 portfolio-item filter-backend">
                         <div class="portfolio-wrap">
-                            <img src="assets/img/portfolio/ImagineMobilelearning/0.png" class="portfolio-image" alt="">
+                            <img src="assets/img/portfolio/ImagineMobileLearning/0.png" class="portfolio-image" alt="">
                             <div class="portfolio-links">
-                                <a href="assets/img/portfolio/ImagineMobilelearning/0.png" data-gallery="portfolioGallery"
+                                <a href="assets/img/portfolio/ImagineMobileLearning/0.png" data-gallery="portfolioGallery"
                                     class="portfolio-lightbox" title=""><i class="bx bx-plus"></i></a>
-                                <a href="ImagineMobilelearning.html" title="More Details" target="_blank"><i class="bx bx-link"></i></a>
+                                <a href="ImagineMobileLearning.html" title="More Details" target="_blank"><i class="bx bx-link"></i></a>
                             </div>
                         </div>
                     </div>
