--- a/AlcoholDelivery.html
+++ b/AlcoholDelivery.html
@@ -91,6 +91,7 @@
                                 <li><strong>Server: </strong>AWS Ubuntu NGINX</li>
                                 <li><strong>Web Services: </strong>Node RESTful API</li>
                                 <li><strong>Others: </strong>Artisan Queue for task Mail Queue for mailing Hoiio SMS API</li>
+                                <li><strong>URL: </strong> <a href="https://alcoholdelivery.com/" target="_blank">https://alcoholdelivery.com/</a></li>
                             </ul>
                         </div>
                     </div>
