--- a/DansFansCity.html
+++ b/DansFansCity.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Details - Brideside</title>
+    <title>Details - Dan's Fans City</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -36,18 +36,18 @@
         <!-- ======= Breadcrumbs ======= -->
         <section id="breadcrumbs" class="breadcrumbs">
             <div class="container">
-                <h2>Brideside</h2><br>
+                <h2>Dan's Fans City</h2><br>
 
                 <h4 style="padding-left: 40px">About</h4><br>
-                <h6 style="padding-left: 80px">Brideside is an innovative e-commerce platform that brings you a wide curated collection of bridal party dresses and accessories. 
-                    This E-commerce website allows brides, bridesmaids and the groom-side to browse and purchase their wedding dresses, gifts, and accessories. 
-                    Users can search through the pool of varieties, save products for viewing in future, track orders and interact with the assigned stylists. 
-                </h6> <br><br>
+                <h6 style="padding-left: 80px">Dan’s Fan City is America’s independent ceiling fan retailer. Dan’s Fan City’s challenge involved increasing their online sales. 
+                    Most of their sales were done in the brick-and-mortar stores, but the online store sales were not keeping up. 
+                    One major contributor to this was that their previous CMS was antiquated and did not support content customization and personalization. 
+                 </h6> <br><br>
 
                 <h4 style="padding-left: 40px">What/How did?</h4><br>
-                <h6 style="padding-left: 80px">Designed the web architecture to keep 'Content-to-Commerce' at the heart of its business model and let they 
-                    fully operate on the motto of delivering best client experience. Focused on the shifting towards delivering an ever-enhanced user-experience, constantly improving the aesthetics of their shopping platform, 
-                    making it feature-loaded and more and more personalized for every visiting shopper, keeping convenience-to-purchase at the center of everything.
+                <h6 style="padding-left: 80px">The updated website is now a reflection of a modern e-commerce store. With enhanced backed-end SEO, the site is seeing better search 
+                    engine rankings and an increase in organic visitors. Also, the fan builder plugin is one of the best on the market and will help drive Dan’s Fan City online sales 
+                    goals.
                 </h6>
             </div>
         </section><!-- End Breadcrumbs -->
@@ -63,15 +63,15 @@
                             <div class="swiper-wrapper align-items-center">
 
                                 <div class="swiper-slide">
-                                    <img src="assets/img/portfolio/Brideside/1.jpg" alt="" class="portfolio-image">
+                                    <img src="assets/img/portfolio/DansFansCity/1.jpg" alt="" class="portfolio-image">
                                 </div>
 
                                 <div class="swiper-slide">
-                                    <img src="assets/img/portfolio/Brideside/2.jpg" alt="" class="portfolio-image">
+                                    <img src="assets/img/portfolio/DansFansCity/2.jpg" alt="" class="portfolio-image">
                                 </div>
 
                                 <div class="swiper-slide">
-                                    <img src="assets/img/portfolio/Brideside/3.jpg" alt="" class="portfolio-image">
+                                    <img src="assets/img/portfolio/DansFansCity/3.jpg" alt="" class="portfolio-image">
                                 </div>
 
                             </div>
@@ -83,10 +83,14 @@
                         <div class="portfolio-info">
                             <h3>Technology Stack</h3>
                             <ul>
-                                <li><strong>Language: </strong>PHP, SQL, HTML, CSS, Javascript</li>
-                                <li><strong>Framework: </strong>Shopify, jQuery</li>
-                                <li><strong>Database: </strong>MySQL</li>
-                                <li><strong>Server: </strong>Ubuntu</li>
+                                <li><strong>Language: </strong>TypeScript, Javascript, HTML, SCSS</li>
+                                <li><strong>Framework: </strong>NodeJS, Angular4</li>
+                                <li><strong>Database: </strong>MongoDB</li>
+                                <li><strong>Web Services: </strong>Node RESTful API</li>
+                                <li><strong>Payment Gateway: </strong>Paypal</li>
+                                <li><strong>Server: </strong>AWS</li>
+                                <li><strong>Others: </strong>Amazon Product Advertising API, HTML Scraping, Social network login, MailChimp for email tracking</li>
+                                <li><strong>URL: </strong> <a href="https://www.dansfancity.com/" target="_blank">https://www.dansfancity.com/</a></li>
                             </ul>
                         </div>
                     </div>
