--- a/ImagineMobileLearning.html
+++ b/ImagineMobileLearning.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Details - Imagine Mobile learning</title>
+    <title>Details - Imagine Mobile Learning</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -36,7 +36,7 @@
         <!-- ======= Breadcrumbs ======= -->
         <section id="breadcrumbs" class="breadcrumbs">
             <div class="container">
-                <h2>Imagine Mobile learning</h2><br>
+                <h2>Imagine Mobile Learning</h2><br>
 
                 <h4 style="padding-left: 40px">About</h4><br>
                 <h6 style="padding-left: 80px"> Enriched with a wide array of features, this app lets you deploy the training courses which can be purchased and integrated by the trainees. 
@@ -89,6 +89,7 @@
                                 <li><strong>Payment Gateway: </strong>Stripe</li>
                                 <li><strong>Server: </strong>Ubuntu Apache</li>
                                 <li><strong>Others: </strong>Social network, Email transfer</li>
+                                <li><strong>URL: </strong> <a href="https://www.imaginemobilelearning.com/" target="_blank">https://www.imaginemobilelearning.com/</a></li>
                             </ul>
                         </div>
                     </div>
