--- a/KipawaHub.html
+++ b/KipawaHub.html
@@ -89,6 +89,7 @@
                                 <li><strong>Payment Gateway: </strong>Stripe</li>
                                 <li><strong>Server: </strong>AWS</li>
                                 <li><strong>Others: </strong>Amazon Product Advertising API, HTML Scraping, Social network login, MailChimp for email tracking</li>
+                                <li><strong>URL: </strong> <a href="https://www.kipawa.io/" target="_blank">https://www.kipawa.io/</a></li>
                             </ul>
                         </div>
                     </div>
