--- a/MorphToken.html
+++ b/MorphToken.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Details - Dufseth</title>
+    <title>Details - Morph Token</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -36,17 +36,19 @@
         <!-- ======= Breadcrumbs ======= -->
         <section id="breadcrumbs" class="breadcrumbs">
             <div class="container">
-                <h2>Dufseth</h2><br>
+                <h2>Morph Token</h2><br>
 
                 <h4 style="padding-left: 40px">About</h4><br>
-                <h6 style="padding-left: 80px">Dufseth is a ground-breaking platform to benefit users with end-to-end funeral services. 
-                    This portal provides the end users with a comprehensive range of post-death rites' products and assistance, all sorted in a single place. 
-                    With Dufseth, users can explore the products filtering them according to the price range and also, make and manage the required bookings in a few clicks.  
+                <h6 style="padding-left: 80px">MorphToken takes one cryptocurrency and outputs one or more cryptocurrencies. It operates without user accounts, allowing to quickly 
+                    exchange multiple assets. Currently, the cryptocurrencies accepted are Bitcoin (BTC), Ethereum (ETH), BitcoinCash (BCH aka BCHN), Litecoin (LTC), Dash (DASH), 
+                    Monero (XMR). MorphToken charges a flat fee for the output network and a dynamic service fee for trading assets.
                 </h6> <br><br>
 
                 <h4 style="padding-left: 40px">What/How did?</h4><br>
-                <h6 style="padding-left: 80px">Tore out the old javascript-based responsive mode switcher, and replaced it with a query-based framework for supporting responsive modes on various web and mobile devices. 
-                    With an intuitive user interface, users can perform a search within their city to pay tribute to their loved ones with top-rated products. 
+                <h6 style="padding-left: 80px">Developed dapps in the Ethereum blockchain using the native Mist app. Used Mist not only to store Ether or send transactions but also 
+                    to implement smart contracts. Custom module build-outs and integrations were implemented to accommodate the internal business flows. A custom library was 
+                    integrated to allow the easier creation of many functions that were built for improved management. Built a system that provides greater transparency and 
+                    far more efficient workflows while maintaining complete control over the internal business flows.
                 </h6>
             </div>
         </section><!-- End Breadcrumbs -->
@@ -62,15 +64,15 @@
                             <div class="swiper-wrapper align-items-center">
 
                                 <div class="swiper-slide">
-                                    <img src="assets/img/portfolio/Dufseth/1.jpg" alt="" class="portfolio-image">
+                                    <img src="assets/img/portfolio/MorphToken/1.jpg" alt="" class="portfolio-image">
                                 </div>
 
                                 <div class="swiper-slide">
-                                    <img src="assets/img/portfolio/Dufseth/2.jpg" alt="" class="portfolio-image">
+                                    <img src="assets/img/portfolio/MorphToken/2.jpg" alt="" class="portfolio-image">
                                 </div>
 
                                 <div class="swiper-slide">
-                                    <img src="assets/img/portfolio/Dufseth/3.jpg" alt="" class="portfolio-image">
+                                    <img src="assets/img/portfolio/MorphToken/3.jpg" alt="" class="portfolio-image">
                                 </div>
 
                             </div>
@@ -82,10 +84,12 @@
                         <div class="portfolio-info">
                             <h3>Technology Stack</h3>
                             <ul>
-                                <li><strong>Language: </strong>PHP</li>
-                                <li><strong>Framework: </strong>Wordpress, jQuery, AJAX</li>
-                                <li><strong>Database: </strong>MySQL</li>
-                                <li><strong>Server: </strong>AWS Ubuntu with Apache</li>
+                                <li><strong>Language: </strong>JavaScript, TypeScript, HTML, CSS</li>
+                                <li><strong>Framework: </strong>React, Node, Express, Next, Redux</li>
+                                <li><strong>Database: </strong>Postgres</li>
+                                <li><strong>Server: </strong>Ubuntu Apache</li>
+                                <li><strong>Others: </strong>Blockchain tech, Mist app, Mail transfer, Social network</li>
+                                <li><strong>URL: </strong> <a href="https://beta.morphtoken.com/" target="_blank">https://beta.morphtoken.com/</a></li>
                             </ul>
                         </div>
                     </div>
