--- a/ReadyForSocial.html
+++ b/ReadyForSocial.html
@@ -89,6 +89,7 @@
                                 <li><strong>Server: </strong>AWS</li>
                                 <li><strong>Web Services: </strong>RESTful API</li>
                                 <li><strong>Others: </strong>SSL</li>
+                                <li><strong>URL: </strong> <a href="https://readyforsocial.com/" target="_blank">https://readyforsocial.com/</a></li>
                             </ul>
                         </div>
                     </div>
