--- a/TrackingGenie.html
+++ b/TrackingGenie.html
@@ -89,6 +89,7 @@
                                 <li><strong>Server: </strong>AWS</li>
                                 <li><strong>Web Services: </strong>Python RESTful API</li>
                                 <li><strong>Others: </strong>Google Maps, CC Avenue Payments, Bulk email services, Bulk SMS services</li>
+                                <li><strong>URL: </strong> <a href="https://www.trackinggenie.com/" target="_blank">https://www.trackinggenie.com/</a></li>
                             </ul>
                         </div>
                     </div>
