--- a/Virtry.html
+++ b/Virtry.html
@@ -89,7 +89,7 @@
                                 <li><strong>Payment Gateway: </strong>Stripe</li>
                                 <li><strong>Server: </strong>Ubuntu Apache</li>
                                 <li><strong>Web Services: </strong>Python RESTful API</li>
-
+                                <li><strong>URL: </strong> <a href="https://app.virtry.net/about-eyeglasses/en/" target="_blank">https://app.virtry.net/about-eyeglasses/en/</a></li>
                             </ul>
                         </div>
                     </div>
