--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Nicholas Dentry's Portfolio</title>
+    <title>Ben Routson's Portfolio</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -33,11 +33,11 @@
 
     <div class="profile">
         <img src="assets/img/profile-img.png" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Nicholas Dentry's Portfolio</a></h1>
+        <h1 class="text-light"><a href="index.html">Ben Routson's Portfolio</a></h1>
 
         <div class="social-links mt-3 text-center">
-            <a href="https://github.com/NicholasDentry" target="_blank" class="github"><i class="bx bxl-github"></i></a>
-            <a href="https://www.linkedin.com/in/nicholas-dentry-27269b222/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+            <a href="https://github.com/BenRoutson" target="_blank" class="github"><i class="bx bxl-github"></i></a>
+            <a href="https://www.linkedin.com/in/ben-routson-27269b222/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
     </div>
 
@@ -55,22 +55,6 @@
                     <div class="col-lg-6" data-aos="fade-up">
 
                         <div class="progress">
-                            <span class="skill">PHP <i class="val">90%</i></span>
-                            <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0"
-                                    aria-valuemax="100"></div>
-                            </div>
-                        </div>
-
-                        <div class="progress">
-                            <span class="skill">Python <i class="val">80%</i></span>
-                            <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
-                                    aria-valuemax="100"></div>
-                            </div>
-                        </div>
-
-                        <div class="progress">
                             <span class="skill">Ruby <i class="val">80%</i></span>
                             <div class="progress-bar-wrap">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
@@ -79,7 +63,7 @@
                         </div>
 
                         <div class="progress">
-                            <span class="skill">.NET <i class="val">80%</i></span>
+                            <span class="skill">Python <i class="val">80%</i></span>
                             <div class="progress-bar-wrap">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
                                     aria-valuemax="100"></div>
@@ -97,22 +81,6 @@
                     </div>
 
                     <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-
-                        <div class="progress">
-                            <span class="skill">LARAVEL <i class="val">95%</i></span>
-                            <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0"
-                                    aria-valuemax="100"></div>
-                            </div>
-                        </div>
-
-                        <div class="progress">
-                            <span class="skill">Django <i class="val">80%</i></span>
-                            <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
-                                    aria-valuemax="100"></div>
-                            </div>
-                        </div>
 
                         <div class="progress">
                             <span class="skill">Node <i class="val">85%</i></span>
@@ -154,51 +122,18 @@
                 </div>
 
                 <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
-
-                    <div class="col-lg-6 col-md-6 portfolio-item filter-frontend">
-                        <div class="portfolio-wrap">
-                            <img src="assets/img/portfolio/MarketN/0.png" class="portfolio-image" alt="">
-                            <div class="portfolio-links">
-                                <a href="assets/img/portfolio/MarketN/0.png" data-gallery="portfolioGallery"
-                                    class="portfolio-lightbox" title=""><i class="bx bx-plus"></i></a>
-                                <a href="MarketN.html" title="More Details" target="_blank"><i class="bx bx-link"></i></a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6 col-md-6 portfolio-item filter-frontend">
-                        <div class="portfolio-wrap">
-                            <img src="assets/img/portfolio/Phoenix/0.png" class="portfolio-image" alt="">
-                            <div class="portfolio-links">
-                                <a href="assets/img/portfolio/Phoenix/0.png" data-gallery="portfolioGallery"
-                                    class="portfolio-lightbox" title=""><i class="bx bx-plus"></i></a>
-                                <a href="Phoenix.html" title="More Details" target="_blank"><i class="bx bx-link"></i></a>
-                            </div>
-                        </div>
-                    </div>
-
+                    
                     <div class="col-lg-6 col-md-6 portfolio-item filter-backend">
                         <div class="portfolio-wrap">
-                            <img src="assets/img/portfolio/ShowrMe/0.png" class="portfolio-image" alt="">
+                            <img src="assets/img/portfolio/DansFansCity/0.png" class="portfolio-image" alt="">
                             <div class="portfolio-links">
-                                <a href="assets/img/portfolio/ShowrMe/0.png" data-gallery="portfolioGallery"
+                                <a href="assets/img/portfolio/DansFansCity/0.png" data-gallery="portfolioGallery"
                                     class="portfolio-lightbox" title=""><i class="bx bx-plus"></i></a>
-                                <a href="ShowrMe.html" title="More Details" target="_blank"><i class="bx bx-link"></i></a>
+                                <a href="DansFansCity.html" title="More Details" target="_blank"><i class="bx bx-link"></i></a>
                             </div>
                         </div>
                     </div>
-
-                    <div class="col-lg-6 col-md-6 portfolio-item filter-backend">
-                        <div class="portfolio-wrap">
-                            <img src="assets/img/portfolio/Foxrey/0.png" class="portfolio-image" alt="">
-                            <div class="portfolio-links">
-                                <a href="assets/img/portfolio/Foxrey/0.png" data-gallery="portfolioGallery"
-                                    class="portfolio-lightbox" title=""><i class="bx bx-plus"></i></a>
-                                <a href="Foxrey.html" title="More Details" target="_blank"><i class="bx bx-link"></i></a>
-                            </div>
-                        </div>
-                    </div>
-
+                    
                     <div class="col-lg-6 col-md-6 portfolio-item filter-backend">
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/AlcoholDelivery/0.png" class="portfolio-image" alt="">
@@ -212,44 +147,11 @@
 
                     <div class="col-lg-6 col-md-6 portfolio-item filter-backend">
                         <div class="portfolio-wrap">
-                            <img src="assets/img/portfolio/AirFusion/0.png" class="portfolio-image" alt="">
-                            <div class="portfolio-links">
-                                <a href="assets/img/portfolio/AirFusion/0.png" data-gallery="portfolioGallery"
-                                    class="portfolio-lightbox" title=""><i class="bx bx-plus"></i></a>
-                                <a href="AirFusion.html" title="More Details" target="_blank"><i class="bx bx-link"></i></a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6 col-md-6 portfolio-item filter-backend">
-                        <div class="portfolio-wrap">
-                            <img src="assets/img/portfolio/DiabetesNaturally/0.png" class="portfolio-image" alt="">
-                            <div class="portfolio-links">
-                                <a href="assets/img/portfolio/DiabetesNaturally/0.png" data-gallery="portfolioGallery"
-                                    class="portfolio-lightbox" title=""><i class="bx bx-plus"></i></a>
-                                <a href="DiabetesNaturally.html" title="More Details" target="_blank"><i class="bx bx-link"></i></a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6 col-md-6 portfolio-item filter-backend">
-                        <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/Virtry/0.png" class="portfolio-image" alt="">
                             <div class="portfolio-links">
                                 <a href="assets/img/portfolio/Virtry/0.png" data-gallery="portfolioGallery"
                                     class="portfolio-lightbox" title=""><i class="bx bx-plus"></i></a>
                                 <a href="Virtry.html" title="More Details" target="_blank"><i class="bx bx-link"></i></a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6 col-md-6 portfolio-item filter-backend">
-                        <div class="portfolio-wrap">
-                            <img src="assets/img/portfolio/FutureAerial/0.png" class="portfolio-image" alt="">
-                            <div class="portfolio-links">
-                                <a href="assets/img/portfolio/FutureAerial/0.png" data-gallery="portfolioGallery"
-                                    class="portfolio-lightbox" title=""><i class="bx bx-plus"></i></a>
-                                <a href="FutureAerial.html" title="More Details" target="_blank"><i class="bx bx-link"></i></a>
                             </div>
                         </div>
                     </div>
@@ -300,55 +202,11 @@
 
                     <div class="col-lg-6 col-md-6 portfolio-item filter-backend">
                         <div class="portfolio-wrap">
-                            <img src="assets/img/portfolio/Ostrij/0.png" class="portfolio-image" alt="">
+                            <img src="assets/img/portfolio/MorphToken/0.png" class="portfolio-image" alt="">
                             <div class="portfolio-links">
-                                <a href="assets/img/portfolio/Ostrij/0.png" data-gallery="portfolioGallery"
+                                <a href="assets/img/portfolio/MorphToken/0.png" data-gallery="portfolioGallery"
                                     class="portfolio-lightbox" title=""><i class="bx bx-plus"></i></a>
-                                <a href="Ostrij.html" title="More Details" target="_blank"><i class="bx bx-link"></i></a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6 col-md-6 portfolio-item filter-backend">
-                        <div class="portfolio-wrap">
-                            <img src="assets/img/portfolio/Dufseth/0.png" class="portfolio-image" alt="">
-                            <div class="portfolio-links">
-                                <a href="assets/img/portfolio/Dufseth/0.png" data-gallery="portfolioGallery"
-                                    class="portfolio-lightbox" title=""><i class="bx bx-plus"></i></a>
-                                <a href="Dufseth.html" title="More Details" target="_blank"><i class="bx bx-link"></i></a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6 col-md-6 portfolio-item filter-backend">
-                        <div class="portfolio-wrap">
-                            <img src="assets/img/portfolio/IEEEEAB/0.png" class="portfolio-image" alt="">
-                            <div class="portfolio-links">
-                                <a href="assets/img/portfolio/IEEEEAB/0.png" data-gallery="portfolioGallery"
-                                    class="portfolio-lightbox" title=""><i class="bx bx-plus"></i></a>
-                                <a href="IEEEEAB.html" title="More Details" target="_blank"><i class="bx bx-link"></i></a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6 col-md-6 portfolio-item filter-backend">
-                        <div class="portfolio-wrap">
-                            <img src="assets/img/portfolio/CitizenshipSupport/0.png" class="portfolio-image" alt="">
-                            <div class="portfolio-links">
-                                <a href="assets/img/portfolio/CitizenshipSupport/0.png" data-gallery="portfolioGallery"
-                                    class="portfolio-lightbox" title=""><i class="bx bx-plus"></i></a>
-                                <a href="CitizenshipSupport.html" title="More Details" target="_blank"><i class="bx bx-link"></i></a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6 col-md-6 portfolio-item filter-backend">
-                        <div class="portfolio-wrap">
-                            <img src="assets/img/portfolio/Brideside/0.png" class="portfolio-image" alt="">
-                            <div class="portfolio-links">
-                                <a href="assets/img/portfolio/Brideside/0.png" data-gallery="portfolioGallery"
-                                    class="portfolio-lightbox" title=""><i class="bx bx-plus"></i></a>
-                                <a href="Brideside.html" title="More Details" target="_blank"><i class="bx bx-link"></i></a>
+                                <a href="MorphToken.html" title="More Details" target="_blank"><i class="bx bx-link"></i></a>
                             </div>
                         </div>
                     </div>
